# ai-berkshire

./: .gitignore  AGENTS.md  README.md  README_EN.md
codex-prompts/: longbridge-data.md  research.md  tradingagents-astock.md
docs/: codex-usage.md  environment-bootstrap.md  longbridge-ai-berkshire.md  longbridge-mcp.md  openclaw-adapter.md  tradingagents-astock-mcp.md
openclaw/: __init__.py  profile_validators.py
reports/: 小米集团研究报告-20260702.md  小鹏集团研究报告-20260630.md  新能源车企销量横向对比-20260701.md  腾讯控股研究报告-20260702.md
scripts/: install-codex-skills.sh  sync-codex-skills.py
services/portfolio_monitor/: .gitignore  README.md  pyproject.toml
services/portfolio_monitor/config/: portfolio.yaml
services/portfolio_monitor/config/migrations/: 001_initial.sql
services/portfolio_monitor/config/openclaw/: mcporter.example.json
services/portfolio_monitor/src/portfolio_monitor/: __init__.py  alerts.py  backtest.py  cli.py  config.py  dashboard.py  db.py  indicators.py  mcp_server.py  models.py  portfolio.py  providers.py  rules.py  scheduler.py  service.py
services/portfolio_monitor/src/portfolio_monitor/web/: dashboard.css  dashboard.html  dashboard.js
services/portfolio_monitor/tests/: conftest.py  test_alerts.py  test_backtest.py  test_config.py  test_dashboard_http.py  test_dashboard_service.py  test_database.py  test_indicators.py  test_mcp.py  test_rules.py  test_service_fixture.py
services/portfolio_monitor/tests/fixtures/: market_20260720.json
services/tradingagents_astock_mcp/: .gitignore  NOTICE  README.md  pyproject.toml
services/tradingagents_astock_mcp/src/tradingagents_astock_mcp/: __init__.py  cli.py  config.py  mcp_server.py  models.py  service.py  store.py  worker.py  worker_entry.py
services/tradingagents_astock_mcp/tests/: test_config.py  test_lifecycle.py  test_mcp.py  test_projection.py  test_validation.py
skills/: earnings-review.md  earnings-team.md  financial-data.md  investment-research.md  (+4 more)
(+84 files in other folders)
