[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ai-berkshire-portfolio-monitor"
version = "0.1.0"
description = "Read-only portfolio monitoring, risk alerts, backtesting, and MCP service for AI Berkshire."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "mcp[cli]>=1.28,<2",
  "starlette>=0.46,<2",
  "pydantic>=2.13,<3",
  "PyYAML>=6.0,<7",
  "APScheduler>=3.11,<4",
  "httpx>=0.28,<1",
  "pandas>=3.0,<4",
  "numpy>=2.5,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "respx>=0.22,<1",
]

[project.scripts]
portfolio-monitor = "portfolio_monitor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_monitor"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel.force-include]
"config/portfolio.yaml" = "portfolio_monitor/runtime_data/portfolio.yaml"
"config/migrations" = "portfolio_monitor/runtime_data/migrations"
