[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ai-berkshire-tradingagents-astock-mcp"
version = "0.1.0"
description = "Isolated, read-only MCP adapter for TradingAgents-astock."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "mcp[cli]>=1.28,<2",
  "pydantic>=2.13,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
]

[project.scripts]
tradingagents-astock-mcp = "tradingagents_astock_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingagents_astock_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
